Added higher assignment mini page

--- a/folios/folio_zugriff.html
+++ b/folios/folio_zugriff.html
@@ -29,7 +29,7 @@
 <h1 class="text-center">Zeiss Zugriff Outdoor Speaker Concept</h1>
 
 <h4 class="text-center">
-  The Zugriff (German for bridge) is a conceptual product imagining is Carl Zeiss AG moved into the field of portable audio.
+  The Zugriff (German word for bridge) is a conceptual product imagining is Carl Zeiss AG moved into the field of portable audio.
 </h4>
 
 <h5>
@@ -47,7 +47,7 @@
 
 <div class="img-box text-center">
   <img class="hor" src='/folios/zugriff/img/initial_sketches.png' alt="Some initial hindge mechanism sketches" />
-  <p class="img-footer">Zeiss leads absolutely in the sectors in which they operate, they set the standards and often have a unique presence despite attempts at copying. It was important that this speaker embody that distinction.></p>
+  <p class="img-footer">Zeiss leads absolutely in the sectors in which they operate, they set the standards and often have a unique presence despite attempts at copying. It was important that this speaker embody that distinction.</p>
 </div>
 
 <h5>
