--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
             <p class="icon_desc">A thematic CAD folio to represent and communicate the design of a consumer good.</p>
           </div>
         </a>
-        <a href='/pdfs/higher_assignment.pdf' target='_blank'>
+        <a href='/folios/folio_higher_assignment.html' target='_blank'>
           <div class="col-sm-4 project dog">
             <div class="cover"></div>
             <h2 class="icon_title">Child's AI Dog Companion</h2>
