Fixed a wrong image directory on the higher assignment, spelling mistakes on both

--- a/folios/folio_higher_assignment.html
+++ b/folios/folio_higher_assignment.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <div class='header-img-container zugriff' style='background-image: url(/folios/zugriff/img/zugriff_banner.png)'>
+  <div class='header-img-container dog' style='background-image: url(/folios/zugriff/img/higher_assignment_banner.png)'>
   <img src='/folios/higher_assignment/img/higher_assignment_banner.jpg' class="header-img" alt='Higher Assignment Banner Image' /></div>
 
 <a href='/pdfs/higher_assignment.pdf' target="_blank" class="a-pdf">
@@ -29,7 +29,7 @@
 <h1 class="text-center">Child’s AI Dog Companion | Educational Toy</h1>
 
 <h4 class="text-center">
-  A project looking to create an educational toy for nursery children aged 2.5 to 4, culminating in a robotic dog designed to provide companionship and empathy building skills.
+  A project looking to create an educational toy for nursery children aged 2.5 to 4 years, culminating in a robotic dog designed to provide companionship and empathy building skills.
 </h4>
 
 <h5>
@@ -55,7 +55,7 @@
 </h5>
 
 <div class="img-box text-center">
-  <img class="hor" src='/folios/zugriff/img/leg_details.png' alt="Final block model" />
+  <img class="hor" src='/folios/higher_assignment/img/leg_details.png' alt="Final block model" />
   <p class="img-footer">Some internal technical development to boost durability and implement safety features.</p>
 </div>
 
