Tidied up higher assignment mini page, adding in missing alt texts. Added Advanced Art and Design mini page

--- a/folios/folio_higher_assignment.html
+++ b/folios/folio_higher_assignment.html
@@ -37,7 +37,7 @@
 </h5>
 
 <div class="img-box text-center">
-  <img class="hor" src='/folios/higher_assignment/img/idea_gen.jpg' alt="Zeiss moodboard" />
+  <img class="hor" src='/folios/higher_assignment/img/idea_gen.jpg' alt="Initial six ideas." />
   <p class="img-footer">The six initial ideas, some focusing on empathy building, some on cognitive development and some on physical development.</p>
 </div>
 
@@ -46,7 +46,7 @@
 </h5>
 
 <div class="img-box text-center">
-  <img class="hor" src='/folios/higher_assignment/img/polymorph_dog.jpg' alt="Some initial hindge mechanism sketches" />
+  <img class="hor" src='/folios/higher_assignment/img/polymorph_dog.jpg' alt="An early sketch model of the dog made of polymorph" />
   <p class="img-footer">An early sketch model to judge the proportions of the dog. After this it was decided to make more elements geometric for fear of negatively blurring the distinction between the tech dog and real animals in the child’s mind.</p>
 </div>
 
@@ -55,7 +55,7 @@
 </h5>
 
 <div class="img-box text-center">
-  <img class="hor" src='/folios/higher_assignment/img/leg_details.png' alt="Final block model" />
+  <img class="hor" src='/folios/higher_assignment/img/leg_details.png' alt="Some technical development of the leg motors" />
   <p class="img-footer">Some internal technical development to boost durability and implement safety features.</p>
 </div>
 
@@ -66,7 +66,7 @@
 </h5>
 
 <div class="img-box text-center">
-  <img class="hor" src='/folios/higher_assignment/img/screen_interface.png' alt="Annotated render" />
+  <img class="hor" src='/folios/higher_assignment/img/screen_interface.png' alt="The game creen interface and technical specifications" />
   <p class="img-footer">In hind sight, more research and development could have been spent on the ‘analogue’ functions of the dog rather than tangents such as this screen for playing games.</p>
 </div>
 
