added adv art mini page to index

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <p class="icon_desc">A computer graphic interface designed on the open source CCV software.</p>
           </div>
         </a>
-        <a href='https://s-media-cache-ak0.pinimg.com/564x/37/56/99/375699e69ea9ff5b2d479879096a03c0.jpg' target='_blank'>
+        <a href='/folios/folio_advanced_higher_art_and_design.html' target='_blank'>
           <div class="col-sm-4 project adv_art">
             <div class="cover"></div>
             <h2 class="icon_title">Advanced Higher Art and Design</h2>
