Fixed image locations on advanced art mini page, removed pdf pointer

--- a/folios/folio_advanced_higher_art_and_design.html
+++ b/folios/folio_advanced_higher_art_and_design.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <div class='header-img-container dog' style='background-image: url("https://i.pinimg.com/564x/37/56/99/375699e69ea9ff5b2d479879096a03c0.jpg")'>
+  <div class='header-img-container art' style='background-image: url("https://i.pinimg.com/564x/37/56/99/375699e69ea9ff5b2d479879096a03c0.jpg")'>
   <img src='https://i.pinimg.com/564x/37/56/99/375699e69ea9ff5b2d479879096a03c0.jpg' class="header-img" alt='Higher Assignment Banner Image' /></div>
 
 <!-- <a href='/pdfs/higher_assignment.pdf' target="_blank" class="a-pdf">
@@ -37,7 +37,7 @@
 </h5>
 
 <div class="img-box text-center">
-  <img class="hor" src='/folios/adv_art/img/adv_art_dark_room.jpg' alt="Initial dark room photography" />
+  <img class="hor" src='/folios/adv_art/adv_art_dark_room.jpg' alt="Initial dark room photography" />
   <p class="img-footer">Images from some initial dark room experiments on form development.</p>
 </div>
 
@@ -48,7 +48,7 @@
 </h5>
 
 <div class="img-box text-center">
-  <img class="hor" src='/folios/adv_art/img/adv_art_triangles.jpg' alt="The triangles mini project " />
+  <img class="hor" src='/folios/adv_art/adv_art_triangles.jpg' alt="The triangles mini project " />
   <p class="img-footer">A collage of images from the ‘triangles’ development route.</p>
 </div>
 
@@ -59,7 +59,7 @@
 </h5>
 
 <div class="img-box text-center">
-  <img class="hor" src='/folios/adv_art/img/adv_art_final.png' alt="The final design outcome" />
+  <img class="hor" src='/folios/adv_art/adv_art_final.png' alt="The final design outcome" />
   <p class="img-footer">The final outcomes in various scenarios showing the Arduino controller and capacitive touch panel.</p>
 </div>
 
@@ -88,7 +88,7 @@
     </div>
   </div>  -->
 
-  <p class="footer-arrow"><i class="fa fa-long-arrow-left"></i> Click here for the full project in downloadable pdf (opens in new tab)</p>
+  <!-- <p class="footer-arrow"><i class="fa fa-long-arrow-left"></i> Click here for the full project in downloadable pdf (opens in new tab)</p> -->
 
 </div>
 
