Added the Tri-D chess set mini page

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
       </div>
 
       <div class="row">
-        <a href='https://s-media-cache-ak0.pinimg.com/564x/2b/df/87/2bdf87448c5031f66f68000163ab348b.jpg' target='_blank'>
+        <a href='/folios/folio_tri_d_chess_set' target='_blank'>
           <div class="col-sm-4 project trid">
             <div class="cover"></div>
             <h2 class="icon_title">Tri-D Chess Set.</h2>
