Added sparda to index

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             <p class="icon_desc">A systems design initiative manifesting as a supermarket campaign to reduce food waste.</p>
           </div>
         </a>
-        <a href='/folios/sparda/img/sparda_banner.jpg' target='_blank'>
+        <a href='/folios/folio_sparda_bank_bench.html' target='_blank'>
           <div class="col-sm-4 project sparda">
             <div class="cover"></div>
             <h2 class="icon_title">Bank Branch Bench</h2>
