Added a comming soon notice to sparda given I need to scan the sketches

--- a/folios/folio_sparda_bank_bench.html
+++ b/folios/folio_sparda_bank_bench.html
@@ -28,6 +28,8 @@
 
 <h1 class="text-center">Bench and Branding Design for Sparda Bank</h1>
 
+<h5><strong><em>Images comming soon</em></strong></h5>
+
 <h4 class="text-center">
   A project to design an icon bench for the German cooperative bank Sparda to use in their branches and also as a promotional item.
 </h4>
