fixed image extension

--- a/folios/folio_advanced_higher_art_and_design.html
+++ b/folios/folio_advanced_higher_art_and_design.html
@@ -59,7 +59,7 @@
 </h5>
 
 <div class="img-box text-center">
-  <img class="hor" src='/folios/adv_art/adv_art_final.png' alt="The final design outcome" />
+  <img class="hor" src='/folios/adv_art/adv_art_final.jpg' alt="The final design outcome" />
   <p class="img-footer">The final outcomes in various scenarios showing the Arduino controller and capacitive touch panel.</p>
 </div>
 
