Old 'hack' to add the animation class to items actually works better if no js, decided to add this functionality to the bio section. Page now fully legible without JS

--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
       </div>
       <div class="row page_profile-bio">
         <div class="col-sm-offset-2 col-sm-8">
-          <p class="page_profile-bio-text anim">I’m also a developer, activist, artist, researcher, mountain-biker, advocate and Glaswegian-turned-Londoner.
+          <p class="page_profile-bio-text">I’m also a developer, activist, artist, researcher, mountain-biker, advocate and Glaswegian-turned-Londoner.
 
 I’m currently studying BA Product Design at Central Saint Martins, UAL, having left high school in 2015 after studying such subjects as Maths, English, Physics, Graphic Communication, Product Design, and Art & Design. <!--For full results click here.-->
 
