--- a/index.html
+++ b/index.html
@@ -191,12 +191,11 @@
             <p class="icon_desc">A full stack app to create and share straw-poles.</p>
           </div>
         </a>
-        <a href='https://glitch.com/edit/#!/adventurous-fender?path=README.md:1:0' target='_blank'>
-          <div class="col-sm-4 project nightlife">
+        <a href='http://candle-liver.glitch.me/' target='_blank'>
+          <div class="col-sm-4 project pin">
             <div class="cover"></div>
-            <h2 class="icon_title">Night life coordinator</h2>
-            <p class="icon_desc">A full stack app to show the nightlife plans of local users.
-            </p>
+            <h2 class="icon_title">PinApathy</h2>
+            <p class="icon_desc">A Pinterest clone / redesign full stack React-Router app.</p>
           </div>
         </a>
 
@@ -211,11 +210,12 @@
             </p>
           </div>
         </a>
-        <a href='https://codepen.io/Oddert/pen/xdKQZv' target='_blank'>
-          <div class="col-sm-4 project XO">
+        <a href='https://glitch.com/edit/#!/adventurous-fender?path=README.md:1:0' target='_blank'>
+          <div class="col-sm-4 project nightlife">
             <div class="cover"></div>
-            <h2 class="icon_title">Tic Tac Toe</h2>
-            <p class="icon_desc">A JavaScript Tic-Tac-Toe game pitching the user against the computer.</p>
+            <h2 class="icon_title">Night life coordinator</h2>
+            <p class="icon_desc">A full stack app to show the nightlife plans of local users.
+            </p>
           </div>
         </a>
         <a href='https://codepen.io/Oddert/pen/KmpQMP' target='_blank'>
