changed calss name for Pinapathy

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
           </div>
         </a>
         <a href='http://candle-liver.glitch.me/' target='_blank'>
-          <div class="col-sm-4 project pin">
+          <div class="col-sm-4 project pinterest">
             <div class="cover"></div>
             <h2 class="icon_title">PinApathy</h2>
             <p class="icon_desc">A Pinterest clone / redesign full stack React-Router app.</p>
