Added cv link to bio

--- a/index.html
+++ b/index.html
@@ -305,6 +305,8 @@
 I’m currently studying BA Product Design at Central Saint Martins, UAL, having left high school in 2015 after studying such subjects as Maths, English, Physics, Graphic Communication, Product Design, and Art & Design. <!--For full results click here.-->
 
 ‘Problem solving’, in my estimation, is the essence of applied design. First and foremost I am a Product Designer and more recently, developer. I believe in following a set of universal principles with all my design-related work and use it as a channel with which to explore topics that interest me such as Politics, sociology, technological development and new skill sets.
+
+<a href='/Robyn Veitch CV.pdf'>Click here to view my CV</a>
 <!--You can read more about my perspective on design here.-->
 </p>
 
