Modified logo to be more appropriate

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div id="home"></div>
 
 <div id="header">
-  <a href='#'><img src="/img/logo_four.png" id="header_image" /></a>
+  <a href='#'><img src="/img/logo_five.png" id="header_image" /></a>
   <div id="header_cover"></div>
   <div class="navBar">
     <div class="navIcons">
