--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
           <span id="type">Hello. My name is Robyn and I'm a problem solver </span><span id="blink">|</span>
         </div>
         <div class="col-sm-4 page_profile-header-image text-center">
-          <img src="/img/main_profile.png">
+          <img src="/img/linkedin_profile_image.jpg">
         </div>
       </div>
       <div class="row page_profile-bio">
