--- a/folios/data-vis-projects.html
+++ b/folios/data-vis-projects.html
@@ -13,6 +13,11 @@
     <script type="text/babel" src="/js/data-vis-projects.js"></script>
     <link type="text/css" href="/css/data-vis-projects.css" rel="stylesheet" />
 
+    <meta name="HandheldFriendly" content="true">
+    <meta name="viewport" content="width=device-width, initial-scale=0.666667, maximum-scale=0.666667, user-scalable=0">
+    <meta name="viewport" content="width=device-width">
+    <link rel="icon" type="image/png" href="/faveicon.png">
+
   </head>
   <body>
     <div class="container">
