--- a/index.html
+++ b/index.html
@@ -307,6 +307,8 @@ I’m currently studying BA Product Design at Central Saint Martins, UAL, having
 ‘Problem solving’, in my estimation, is the essence of applied design. First and foremost I am a Product Designer and more recently, developer. I believe in following a set of universal principles with all my design-related work and use it as a channel with which to explore topics that interest me such as Politics, sociology, technological development and new skill sets.
 
 <a href='/Robyn Veitch CV.pdf'>Click here to view my CV</a>
+
+<a href='mailto:r.veitch0420171@arts.ac.uk' class='mailto'>Get in touch</a>
 <!--You can read more about my perspective on design here.-->
 </p>
 
