--- a/index.html
+++ b/index.html
@@ -308,9 +308,9 @@ I’m currently studying BA Product Design at Central Saint Martins, UAL, having
 
 <a href='/Robyn Veitch CV.pdf'>Click here to view my CV</a>
 
-<div class='mailto-container'>
+<span class='mailto-container'>
   <a href='mailto:r.veitch0420171@arts.ac.uk' class='mailto'>Get in touch</a>
-</div>
+</span>
 <!--You can read more about my perspective on design here.-->
 </p>
 
