--- a/index.html
+++ b/index.html
@@ -300,11 +300,13 @@
       </div>
       <div class="row page_profile-bio">
         <div class="col-sm-offset-2 col-sm-8">
-          <p class="page_profile-bio-text">I’m also a developer, activist, artist, researcher, mountain-biker, advocate and Glaswegian-turned-Londoner.
+          <p class="page_profile-bio-text">I’m also a developer, artist, researcher, cyclist, activist, advocate and Glaswegian-turned-Londoner.
 
-I’m currently studying BA Product Design at Central Saint Martins, UAL, having left high school in 2015 after studying such subjects as Maths, English, Physics, Graphic Communication, Product Design, and Art & Design. <!--For full results click here.-->
+I'm studying BA Product Design at Central Saint Martins, UAL and am part of the Social Games Against Crime UK team. I graduated high school having studied such subjects as Maths, English, Physics, Graphic Communication, Product Design, and Art & Design.
 
-‘Problem solving’, in my estimation, is the essence of applied design. First and foremost I am a Product Designer and more recently, developer. I believe in following a set of universal principles with all my design-related work and use it as a channel with which to explore topics that interest me such as Politics, sociology, technological development and new skill sets.
+I specialise in the application of social and user-centred design. I believe that research and listening to real people is imperative to creating meaningful solutions and adding genuine value to improve peoples’ lives. This is, to me ‘Problem Solving’, and problem solving, is the essence of design.
+
+I have a wide skillset and focus on iterative development and the appropriate application of technology. I’m a self-taught developer, having completed the course by the non-profit freeCodeCamp.
 
 <a href='/Robyn Veitch CV.pdf'>Click here to view my CV</a>
 
