bio section: swaped out whitespace preservation for individual para elements

--- a/index.html
+++ b/index.html
@@ -300,23 +300,21 @@
       </div>
       <div class="row page_profile-bio">
         <div class="col-sm-offset-2 col-sm-8">
-          <p class="page_profile-bio-text">I’m also a developer, artist, researcher, cyclist, activist, advocate and Glaswegian-turned-Londoner.
+          <div class="page_profile-bio-text">
+            <p>I’m also a developer, artist, researcher, cyclist, activist, advocate and Glaswegian-turned-Londoner.</p>
+            <p>I'm studying BA Product Design at Central Saint Martins, UAL and am part of the Social Games Against Crime UK team. I graduated high school having studied such subjects as Maths, English, Physics, Graphic Communication, Product Design, and Art & Design.</p>
+            <p>I specialise in the application of social and user-centred design. I believe that research and listening to real people is imperative to creating meaningful solutions and adding genuine value to improve peoples’ lives. This is, to me ‘Problem Solving’, and problem solving, is the essence of design.</p>
+            <p>I have a wide skillset and focus on iterative development and the appropriate application of technology. I’m a self-taught developer, having completed the course by the non-profit freeCodeCamp.</p>
 
-I'm studying BA Product Design at Central Saint Martins, UAL and am part of the Social Games Against Crime UK team. I graduated high school having studied such subjects as Maths, English, Physics, Graphic Communication, Product Design, and Art & Design.
+            <a href='/Robyn Veitch CV.pdf'>Click here to view my CV</a>
 
-I specialise in the application of social and user-centred design. I believe that research and listening to real people is imperative to creating meaningful solutions and adding genuine value to improve peoples’ lives. This is, to me ‘Problem Solving’, and problem solving, is the essence of design.
-
-I have a wide skillset and focus on iterative development and the appropriate application of technology. I’m a self-taught developer, having completed the course by the non-profit freeCodeCamp.
-
-<a href='/Robyn Veitch CV.pdf'>Click here to view my CV</a>
-
-<span class='mailto-container'>
-  <a></a>
-  <a href='mailto:r.veitch0420171@arts.ac.uk' class='mailto'>Get in touch</a>
-  <a></a>
-</span>
-<!--You can read more about my perspective on design here.-->
-</p>
+            <span class='mailto-container'>
+              <a></a>
+              <a href='mailto:r.veitch0420171@arts.ac.uk' class='mailto'>Get in touch</a>
+              <a></a>
+            </span>
+            <!--You can read more about my perspective on design here.-->
+          </div>
 
           <div id="contact"></div>
 
