changed 'about me' to 'about' seems neater

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <div class="navBar">
     <div class="navIcons">
       <p><a href='#contact' class='smooth'>Contact</a></p>
-      <p><a href='#about' class='smooth'>About Me</a></p>
+      <p><a href='#about' class='smooth'>About</a></p>
       <p><a href='#portfolio' class='smooth'>Portfolio</a></p>
       <p><a href='#' class='smooth'>Home</a></p>
     </div>
@@ -33,7 +33,7 @@
   <div class="navDrop-menu text-center">
     <p><a href='#' class='smooth'>Home</a></p>
     <p><a href='#portfolio' class='smooth'>Portfolio</a></p>
-    <p><a href='#about' class='smooth'>About Me</a></p>
+    <p><a href='#about' class='smooth'>About</a></p>
     <p><a href='#contact' class='smooth'>Contact</a></p>
   </div>
 
