Swaped order of data vis items, pages no longer open new tab

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
       </div>
 
       <div class="row">
-        <a href='/folios/data-vis-projects.html' target='_blank'>
+        <a href='/folios/data-vis-projects.html'>
           <div class="col-sm-4 project datavis">
             <div class="cover"></div>
             <h2 class="icon_title">Data Visualisation Projects <i class="fa fa-angle-right"></i></h2>
@@ -263,7 +263,7 @@
             </p>
           </div>
         </a>
-        <a href='/folios/backend-projects.html' target='_blank'>
+        <a href='/folios/backend-projects.html'>
           <div class="col-sm-4 project backend">
             <div class="cover"></div>
             <h2 class="icon_title">API / Microservice Projects <i class="fa fa-angle-right"></i></h2>
