--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
 
             <div class="page_profile-links-box">
             <!-- <h3 class="text-center page_profile-links"><i class="fa fa-envelope"></i> robertveitch491@gmail.com</h3> -->
-            <h3 class="text-center page_profile-links"><i class="fa fa-envelope"></i> r.veitch0420171@arts.ac.uk</h3>
+            <h3 class="text-center page_profile-links"><i class="fa fa-envelope"></i> r.veitch@arts.ac.uk</h3>
             <h3 class="text-center page_profile-links"><i class="fa fa-phone"></i> (+44) 07767 297041</h3>
             <h3 class="text-center page_profile-links"><i class="fa fa-skype"></i> odderte</h3>
             </div>
