Added exclimation mark to the CTA button. Very important stuff here

--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
 
             <span class='mailto-container'>
               <a></a>
-              <a href='mailto:r.veitch@arts.ac.uk' class='mailto'>Get in touch</a>
+              <a href='mailto:r.veitch@arts.ac.uk' class='mailto'>Get in touch!</a>
               <a></a>
             </span>
             <!--You can read more about my perspective on design here.-->
