Added jpg image duplicates for compatibility, reworded some things

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
           <div class="col-sm-4 project dungeon">
             <div class="cover"></div>
             <h2 class="icon_title">Rouge-like dungeon crawler</h2>
-            <p class="icon_desc">A React-Redux game based on a classc dungeon crawler game.
+            <p class="icon_desc">A React-Redux game based on a classc dungeon crawler typeology.
             </p>
           </div>
         </a>
