Added skill share app, chess platform and notes app

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
       <div class="row">
 
         <div class="col-sm-12">
-          <h4 class="text-center folio_code_sep">The following projects are code based, following from my recent foray into code and web / app development.
+          <h4 class="text-center folio_code_sep">The following projects are code based, seperated out as many are here for the purpouse of demonstrating a particular concept, rather than stemming from a holistic design brief.
 
       View my front end web-development certificate on my <a href='http://www.freecodecamp.com/oddert' target='_blank'>Free Code Camp profile</a>.</h4>
         </div>
@@ -250,6 +250,32 @@
             <div class="cover"></div>
             <h2 class="icon_title">Conway's Game of Life</h2>
             <p class="icon_desc">John Horton Conway's iconic Game of Life created with React.</p>
+          </div>
+        </a>
+      </div>
+
+      <div class="row">
+        <a href='https://oddert-notes-app.glitch.me/' target='_blank'>
+          <div class="col-sm-4 project notes">
+            <div class="cover"></div>
+            <h2 class="icon_title">Cloud Notes App</h2>
+            <p class="icon_desc">A full stack React Redux app with GitHub Login for taking notes which are saved online.
+            </p>
+          </div>
+        </a>
+        <a href='https://oddert-chess-game.glitch.me/' target='_blank'>
+          <div class="col-sm-4 project chess_platform">
+            <div class="cover"></div>
+            <h2 class="icon_title">Chess Platform</h2>
+            <p class="icon_desc">(Work in Progress) A Socket.io Redux app to play chess in real time. Features live chat, moves and display updates.
+            </p>
+          </div>
+        </a>
+        <a href='https://skill-share-app.glitch.me/listings' target='_blank'>
+          <div class="col-sm-4 project share_app">
+            <div class="cover"></div>
+            <h2 class="icon_title">Skill Share App</h2>
+            <p class="icon_desc">(Work in Progress) An app for trading resources and skills in a campus context.</p>
           </div>
         </a>
       </div>
