fixed spelling mistakes

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
       <div class="row">
 
         <div class="col-sm-12">
-          <h4 class="text-center folio_code_sep">The following projects are code based, seperated out as many are here for the purpouse of demonstrating a particular concept, rather than stemming from a holistic design brief.
+          <h4 class="text-center folio_code_sep">The following projects are code based, separated out as many are here for the purpose of demonstrating a particular concept, rather than stemming from a holistic design brief.
 
       View my front end web-development certificate on my <a href='http://www.freecodecamp.com/oddert' target='_blank'>Free Code Camp profile</a>.</h4>
         </div>
