removed skype name, added location

--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
             <!-- <h3 class="text-center page_profile-links"><i class="fa fa-envelope"></i> robertveitch491@gmail.com</h3> -->
             <h3 class="text-center page_profile-links"><i class="fa fa-envelope"></i> r.veitch@arts.ac.uk</h3>
             <h3 class="text-center page_profile-links"><i class="fa fa-phone"></i> (+44) 07767 297041</h3>
-            <h3 class="text-center page_profile-links"><i class="fa fa-skype"></i> odderte</h3>
+            <h3 class="text-center page_profile-links"><i class="fa fa-map-marker"></i> North London (zone 2)</h3>
             </div>
 
         </div>
