--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Robyn Veitch Portfolio Page</title>
   <script src="https://use.fontawesome.com/c98d4b8a6d.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Open+Sans|Poiret+One" rel="stylesheet">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="/css/style.css">
   <meta name="HandheldFriendly" content="true">
   <meta name="viewport" content="width=device-width, initial-scale=0.666667, maximum-scale=0.666667, user-scalable=0">
   <meta name="viewport" content="width=device-width">
@@ -478,7 +478,7 @@
 <script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.6.1/react.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/react/15.6.1/react-dom.min.js'></script>
 
-<script  src="js/index.js"></script>
+<script  src="/js/index.js"></script>
 
 </body>
 </html>
