added the begining of a blog engine, added new folio items commented out these new items require new work before implamentation

--- a/index.html
+++ b/index.html
@@ -280,6 +280,32 @@
         </a>
       </div>
 
+      <!-- <div class="row">
+        <a href='https://oddert-30-days-js.glitch.me/' target='_blank'>
+          <div class="col-sm-4 project js30">
+            <div class="cover"></div>
+            <h2 class="icon_title">#JS30</h2>
+            <p class="icon_desc">For a month I commited to completing the JavaScript 30 challenge with my own twist.
+            </p>
+          </div>
+        </a>
+        <a href='#' target='_blank'>
+          <div class="col-sm-4 project templates">
+            <div class="cover"></div>
+            <h2 class="icon_title">Template Sites</h2>
+            <p class="icon_desc">A collection of faux site templates.
+            </p>
+          </div>
+        </a>
+        <a href='https://resolute-church.glitch.me/' target='_blank'>
+          <div class="col-sm-4 project directions_app">
+            <div class="cover"></div>
+            <h2 class="icon_title">Directions App</h2>
+            <p class="icon_desc">A task app for combination 'work' and 'play' activities</p>
+          </div>
+        </a>
+      </div> -->
+
       <div class="row">
         <a href='/folios/data-vis-projects.html'>
           <div class="col-sm-4 project datavis">
