added an 'anchor' to jump to the code-specific section

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 
       <div class="row">
 
-        <div class="col-sm-12">
+        <div class="col-sm-12" id="code_anchor">
           <h4 class="text-center folio_code_sep">The following projects are code based, separated out as many are here for the purpose of demonstrating a particular concept, rather than stemming from a holistic design brief.
 
       View my front end web-development certificate on my <a href='http://www.freecodecamp.com/oddert' target='_blank'>Free Code Camp profile</a>.</h4>
