--- a/index.html
+++ b/index.html
@@ -280,23 +280,7 @@
         </a>
       </div>
 
-      <!-- <div class="row">
-        <a href='https://oddert-30-days-js.glitch.me/' target='_blank'>
-          <div class="col-sm-4 project js30">
-            <div class="cover"></div>
-            <h2 class="icon_title">#JS30</h2>
-            <p class="icon_desc">For a month I commited to completing the JavaScript 30 challenge with my own twist.
-            </p>
-          </div>
-        </a>
-        <a href='#' target='_blank'>
-          <div class="col-sm-4 project templates">
-            <div class="cover"></div>
-            <h2 class="icon_title">Template Sites</h2>
-            <p class="icon_desc">A collection of faux site templates.
-            </p>
-          </div>
-        </a>
+      <div class="row">
         <a href='https://resolute-church.glitch.me/' target='_blank'>
           <div class="col-sm-4 project directions_app">
             <div class="cover"></div>
@@ -304,7 +288,23 @@
             <p class="icon_desc">A task app for combination 'work' and 'play' activities</p>
           </div>
         </a>
-      </div> -->
+        <a href='https://oddert-template-sites.glitch.me/' target='_blank'>
+          <div class="col-sm-4 project templates">
+            <div class="cover"></div>
+            <h2 class="icon_title">Template Sites <i class="fa fa-angle-right"></i></h2>
+            <p class="icon_desc">A collection of faux site templates.
+            </p>
+          </div>
+        </a>
+        <a href='https://oddert-30-days-js.glitch.me/' target='_blank'>
+          <div class="col-sm-4 project js30">
+            <div class="cover"></div>
+            <h2 class="icon_title">#JS30 <i class="fa fa-angle-right"></i></h2>
+            <p class="icon_desc">For a month I commited to completing the JavaScript 30 challenge with my own twist.
+            </p>
+          </div>
+        </a>
+      </div>
 
       <div class="row">
         <a href='/folios/data-vis-projects.html'>
