new link for chess. Chess 2.0 the long awaited sequil
 glitch rejected the chess of before.

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
             </p>
           </div>
         </a>
-        <a href='https://oddert-chess-game.glitch.me/' target='_blank'>
+        <a href='https://oddert-chess-game-1.glitch.me/' target='_blank'>
           <div class="col-sm-4 project chess_platform">
             <div class="cover"></div>
             <h2 class="icon_title">Chess Platform</h2>
