--- a/folios/folio_higher_assignment.html
+++ b/folios/folio_higher_assignment.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <div class='header-img-container dog' style='background-image: url(/folios/zugriff/img/higher_assignment_banner.png)'>
+  <div class='header-img-container dog' style='background-image: url("/folios/zugriff/higher_assignment/higher_assignment_banner.png")'>
   <img src='/folios/higher_assignment/img/higher_assignment_banner.jpg' class="header-img" alt='Higher Assignment Banner Image' /></div>
 
 <a href='/pdfs/higher_assignment.pdf' target="_blank" class="a-pdf">
