--- a/index.html
+++ b/index.html
@@ -48,21 +48,21 @@
     <div class="container-fluid folio">
 
       <div class="row">
-        <a href='/folios/folio_polymat.html' target='_blank'>
+        <a href='/folios/folio_polymat.html' >
           <div class="col-sm-4 project polymat">
             <div class="cover"></div>
             <h2 class="icon_title">Polymat Kitchen Grip Assistance</h2>
             <p class="icon_desc">A multi-purpouse gripping mat to aid fading grip / dexteritey in the kitchen.</p>
           </div>
         </a>
-        <a href='/folios/folio_root_to_root.html' target='_blank'>
+        <a href='/folios/folio_root_to_root.html' >
           <div class="col-sm-4 project root">
             <div class="cover"></div>
             <h2 class="icon_title">Root to Root</h2>
             <p class="icon_desc">A systems design initiative manifesting as a supermarket campaign to reduce food waste.</p>
           </div>
         </a>
-        <a href='/folios/folio_margate.html' target='_blank'>
+        <a href='/folios/folio_margate.html' >
           <div class="col-sm-4 project margate">
             <div class="cover"></div>
             <h2 class="icon_title">The Margate Art Tour</h2>
@@ -72,21 +72,21 @@
       </div>
 
       <div class="row">
-        <a href='/folios/folio_station_lighting.html' target='_blank'>
+        <a href='/folios/folio_station_lighting.html' >
           <div class="col-sm-4 project station">
             <div class="cover"></div>
             <h2 class="icon_title">Station Lighting / Interactive Board</h2>
             <p class="icon_desc">An interactive station installation acting as an alternative lighting system.</p>
           </div>
         </a>
-        <a href='/folios/folio_zugriff.html' target='_blank'>
+        <a href='/folios/folio_zugriff.html' >
           <div class="col-sm-4 project zugriff">
             <div class="cover"></div>
             <h2 class="icon_title">Zeiss Zugriff Outdoor Speaker</h2>
             <p class="icon_desc">An experimental conceptual adventure speaker designed for Carl Zeiss AG.</p>
           </div>
         </a>
-        <a href='/folios/folio_sparda_bank_bench.html' target='_blank'>
+        <a href='/folios/folio_sparda_bank_bench.html' >
           <div class="col-sm-4 project sparda">
             <div class="cover"></div>
             <h2 class="icon_title">Bank Branch Bench</h2>
@@ -97,21 +97,21 @@
 
       <div class="row">
 
-        <a href='/folios/folio_fusion_poster.html' target='_blank'>
+        <a href='/folios/folio_fusion_poster.html' >
           <div class="col-sm-4 project fusion">
             <div class="cover"></div>
             <h2 class="icon_title">Nat Five Course Template</h2>
             <p class="icon_desc">A poster created as an architype for the Product Design National Five course re-write in high school.</p>
           </div>
         </a>
-        <a href='/folios/folio_thematic.html' target='_blank'>
+        <a href='/folios/folio_thematic.html' >
           <div class="col-sm-4 project thematic">
             <div class="cover"></div>
             <h2 class="icon_title">Graphics Thematic Folio</h2>
             <p class="icon_desc">A thematic CAD folio to represent and communicate the design of a consumer good.</p>
           </div>
         </a>
-        <a href='/folios/folio_higher_assignment.html' target='_blank'>
+        <a href='/folios/folio_higher_assignment.html' >
           <div class="col-sm-4 project dog">
             <div class="cover"></div>
             <h2 class="icon_title">Child's AI Dog Companion</h2>
@@ -121,21 +121,21 @@
       </div>
 
       <div class="row">
-        <a href='/folios/folio_victorinox.html' target='_blank'>
+        <a href='/folios/folio_victorinox.html' >
           <div class="col-sm-4 project victorinox">
             <div class="cover"></div>
             <h2 class="icon_title">Swiss Army Knife Graphics</h2>
             <p class="icon_desc">Graphics designed for the casing for the casing of Victorinox’s Swiss Army Knife.</p>
           </div>
         </a>
-        <a href='/folios/folio_ccv.html' target='_blank'>
+        <a href='/folios/folio_ccv.html' >
           <div class="col-sm-4 project ccv">
             <div class="cover"></div>
             <h2 class="icon_title">CCV Interface Table</h2>
             <p class="icon_desc">A computer graphic interface designed on the open source CCV software.</p>
           </div>
         </a>
-        <a href='/folios/folio_advanced_higher_art_and_design.html' target='_blank'>
+        <a href='/folios/folio_advanced_higher_art_and_design.html' >
           <div class="col-sm-4 project adv_art">
             <div class="cover"></div>
             <h2 class="icon_title">Advanced Higher Art and Design</h2>
@@ -145,21 +145,21 @@
       </div>
 
       <div class="row">
-        <a href='/folios/folio_tri_d_chess_set' target='_blank'>
+        <a href='/folios/folio_tri_d_chess_set' >
           <div class="col-sm-4 project trid">
             <div class="cover"></div>
             <h2 class="icon_title">Tri-D Chess Set.</h2>
             <p class="icon_desc">A replica Star Trek '3D Chess Set' created as a gift.</p>
           </div>
         </a>
-        <a href='/folios/folio_arkwright.html' target='_blank'>
+        <a href='/folios/folio_arkwright.html' >
           <div class="col-sm-4 project arkwright">
             <div class="cover"></div>
             <h2 class="icon_title">Arkwright 'Hold, Store, Display'</h2>
             <p class="icon_desc">An exploration into a 'holding device' for a consumer good.</p>
           </div>
         </a>
-        <a href='/folios/folio_torch.html' target='_blank'>
+        <a href='/folios/folio_torch.html' >
           <div class="col-sm-4 project longevity">
             <div class="cover"></div>
             <h2 class="icon_title">Longevity</h2>
@@ -176,14 +176,14 @@
       View my front end web-development certificate on my <a href='http://www.freecodecamp.com/oddert' target='_blank'>Free Code Camp profile</a>.</h4>
         </div>
 
-        <a href='https://resolute-church.glitch.me/' target='_blank'>
+        <a href='https://resolute-church.glitch.me/' >
           <div class="col-sm-4 project directions_app">
             <div class="cover"></div>
             <h2 class="icon_title">Directions App</h2>
             <p class="icon_desc">A task app for combination 'work' and 'play' activities</p>
           </div>
         </a>
-        <a href='https://oddert-template-sites.glitch.me/' target='_blank'>
+        <a href='https://oddert-template-sites.glitch.me/' >
           <div class="col-sm-4 project templates">
             <div class="cover"></div>
             <h2 class="icon_title">Template Sites <i class="fa fa-angle-right"></i></h2>
@@ -191,7 +191,7 @@
             </p>
           </div>
         </a>
-        <a href='https://oddert-30-days-js.glitch.me/' target='_blank'>
+        <a href='https://oddert-30-days-js.glitch.me/' >
           <div class="col-sm-4 project js30">
             <div class="cover"></div>
             <h2 class="icon_title">#JS30 <i class="fa fa-angle-right"></i></h2>
@@ -218,7 +218,7 @@
             </p>
           </div>
         </a>
-        <a href='https://codepen.io/collection/DRoyOg/' target='_blank'>
+        <a href='https://codepen.io/collection/DRoyOg/' >
           <div class="col-sm-4 project moreCode">
             <div class="cover"></div>
             <h2 class="icon_title">More Front End Projects <i class="fa fa-angle-right"></i></h2>
@@ -228,7 +228,7 @@
       </div>
 
       <div class="row">
-        <a href='https://codepen.io/Oddert/pen/pLVvWL' target='_blank'>
+        <a href='https://codepen.io/Oddert/pen/pLVvWL' >
           <div class="col-sm-4 project dungeon">
             <div class="cover"></div>
             <h2 class="icon_title">Rouge-like dungeon crawler</h2>
@@ -236,14 +236,14 @@
             </p>
           </div>
         </a>
-        <a href='https://glitch.com/edit/#!/clever-growth?path=README.md:1:0' target='_blank'>
+        <a href='https://glitch.com/edit/#!/clever-growth?path=README.md:1:0' >
           <div class="col-sm-4 project vote">
             <div class="cover"></div>
             <h2 class="icon_title">Voting app</h2>
             <p class="icon_desc">A full stack app to create and share straw-poles.</p>
           </div>
         </a>
-        <a href='http://candle-liver.glitch.me/' target='_blank'>
+        <a href='http://candle-liver.glitch.me/' >
           <div class="col-sm-4 project pinterest">
             <div class="cover"></div>
             <h2 class="icon_title">PinApathy</h2>
@@ -254,7 +254,7 @@
       </div>
 
       <div class="row">
-        <a href='https://codepen.io/Oddert/pen/eEOxKW' target='_blank'>
+        <a href='https://codepen.io/Oddert/pen/eEOxKW' >
           <div class="col-sm-4 project recipies">
             <div class="cover"></div>
             <h2 class="icon_title">Recipe Book</h2>
@@ -262,7 +262,7 @@
             </p>
           </div>
         </a>
-        <a href='https://glitch.com/edit/#!/adventurous-fender?path=README.md:1:0' target='_blank'>
+        <a href='https://glitch.com/edit/#!/adventurous-fender?path=README.md:1:0' >
           <div class="col-sm-4 project nightlife">
             <div class="cover"></div>
             <h2 class="icon_title">Night life coordinator</h2>
@@ -270,7 +270,7 @@
             </p>
           </div>
         </a>
-        <a href='https://codepen.io/Oddert/pen/KmpQMP' target='_blank'>
+        <a href='https://codepen.io/Oddert/pen/KmpQMP' >
           <div class="col-sm-4 project simon">
             <div class="cover"></div>
             <h2 class="icon_title">Simon Says</h2>
@@ -281,7 +281,7 @@
       </div>
 
       <div class="row">
-        <a href='https://crimson-bandana.glitch.me/' target='_blank'>
+        <a href='https://crimson-bandana.glitch.me/' >
           <div class="col-sm-4 project stock">
             <div class="cover"></div>
             <h2 class="icon_title">Live Stock Market Viewer</h2>
@@ -289,7 +289,7 @@
             </p>
           </div>
         </a>
-        <a href='https://codepen.io/Oddert/pen/XMKMzK' target='_blank'>
+        <a href='https://codepen.io/Oddert/pen/XMKMzK' >
           <div class="col-sm-4 project calc">
             <div class="cover"></div>
             <h2 class="icon_title">JS Calculator</h2>
@@ -297,7 +297,7 @@
             </p>
           </div>
         </a>
-        <a href='https://codepen.io/Oddert/full/POwgdP/' target='_blank'>
+        <a href='https://codepen.io/Oddert/full/POwgdP/' >
           <div class="col-sm-4 project gameOfLife">
             <div class="cover"></div>
             <h2 class="icon_title">Conway's Game of Life</h2>
@@ -307,7 +307,7 @@
       </div>
 
       <div class="row">
-        <a href='https://oddert-notes-app.glitch.me/' target='_blank'>
+        <a href='https://oddert-notes-app.glitch.me/' >
           <div class="col-sm-4 project notes">
             <div class="cover"></div>
             <h2 class="icon_title">Cloud Notes App</h2>
@@ -315,7 +315,7 @@
             </p>
           </div>
         </a>
-        <a href='https://oddert-chess-game-1.glitch.me/' target='_blank'>
+        <a href='https://oddert-chess-game-1.glitch.me/' >
           <div class="col-sm-4 project chess_platform">
             <div class="cover"></div>
             <h2 class="icon_title">Chess Platform</h2>
@@ -323,7 +323,7 @@
             </p>
           </div>
         </a>
-        <a href='https://skill-share-app.glitch.me/listings' target='_blank'>
+        <a href='https://skill-share-app.glitch.me/listings' >
           <div class="col-sm-4 project share_app">
             <div class="cover"></div>
             <h2 class="icon_title">Skill Share App</h2>
