removed innapropriate use of the word 'sappy', what was I thinking?

--- a/folios/folio_root_to_root.html
+++ b/folios/folio_root_to_root.html
@@ -86,7 +86,7 @@
 
 <div class="img-box text-center">
   <img class="hor" src='/folios/root_to_root/img/simple_poster.jpg' alt="Community Market simple poster" />
-  <p class="img-footer">A sappy poster to generate curiosity in the community market part of the initiative.</p>
+  <p class="img-footer">An amusing and direct poster to generate curiosity in the community market initiative.</p>
 </div>
 
 <h5>
