url adjustments to no longer point to glitch edit pages

--- a/index.html
+++ b/index.html
@@ -236,10 +236,10 @@
             </p>
           </div>
         </a>
-        <a href='https://glitch.com/edit/#!/clever-growth?path=README.md:1:0' >
+        <a href='https://clever-growth.glitch.me/polls' >
           <div class="col-sm-4 project vote">
             <div class="cover"></div>
-            <h2 class="icon_title">Voting app</h2>
+            <h2 class="icon_title">Voting App</h2>
             <p class="icon_desc">A full stack app to create and share straw-poles.</p>
           </div>
         </a>
@@ -262,7 +262,7 @@
             </p>
           </div>
         </a>
-        <a href='https://glitch.com/edit/#!/adventurous-fender?path=README.md:1:0' >
+        <a href='https://adventurous-fender.glitch.me/' >
           <div class="col-sm-4 project nightlife">
             <div class="cover"></div>
             <h2 class="icon_title">Night life coordinator</h2>
