--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <title>Robyn Veitch | Portfolio Page</title>
-  <script src="https://use.fontawesome.com/c98d4b8a6d.js"></script>
+  <!-- <script src="https://use.fontawesome.com/c98d4b8a6d.js"></script> -->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Open+Sans|Poiret+One" rel="stylesheet">
   <link rel="stylesheet" href="/css/style.css">
   <meta name="HandheldFriendly" content="true">
