--- a/index.html
+++ b/index.html
@@ -355,9 +355,9 @@
           <div class="col-sm-offset-2 col-sm-8">
             <div class="page_profile-bio-text">
               <p>I’m also a developer, artist, researcher, cyclist, activist, advocate and Glaswegian-turned-Londoner.</p>
-              <p>I'm studying BA Product Design at Central Saint Martins, UAL and am part of the <a href="http://www.designagainstcrime.com/">Design Against Crime: Social Games UK team</a>. I graduated high school having studied such subjects as Maths, English, Physics, Graphic Communication, Product Design, and Art & Design.</p>
+              <p>Student BA Product Design (DPS) at Central Saint Martins, UAL.</p>
               <p>I specialise in the application of social and user-centred design. I believe that research and listening to real people is imperative to creating meaningful solutions and adding genuine value to improve peoples’ lives. This is, to me ‘Problem Solving’, and problem solving, is the essence of design.</p>
-              <p>I have a wide skillset and focus on iterative development and the appropriate application of technology. I’m a self-taught developer, having completed the course by the non-profit freeCodeCamp.</p>
+              <p>I have a wide skillset and focus on iterative development and the appropriate application of technology. I’m a self-taught developer with the amazing non-profit, <a href="https://www.freecodecamp.org/certification/oddert/full-stack">freeCodeCamp.</a></p>
 
               <a href='/Robyn Veitch CV - Website.pdf'>Click here to view my CV</a>
 
